<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculable</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_hizli_carpma">HizliCarpma</string>
    <string name="title_activity_hizli_toplama">HizliToplama</string>
    <string name="title_activity_normal_carpma">HizliToplama</string>
    <string name="title_activity_normal_toplama">HizliToplama</string>
    <string name="title_activity_ayarlar">HizliToplama</string>
    <string name="fastadd">Fast Addition</string>
    <string name="fastmultiply">Fast Multiplication</string>
    <string name="normalmultiply">Normal Multiplication</string>
    <string name="normaladd">Normal Addition</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gobackmenu">Are you sure you want to go back to menu?</string>
    <string name="goquit">Are you sure you want to quit?</string>
    <string name="wrong_alert">Wrong Answer :(</string>
    <string name="time_alert">Time is Over :(</string>
    <string name="abouttext">This Game is created just for fun. \nI hope you get fun too ;)</string>
    <string name="nevv">New</string>
    <string name="best">Best</string>

</resources>