<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.sorucevap.SayisalGiris" >

    <Button
        android:id="@+id/button5"
        style="@style/ButtonText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/buttonblack"
        android:onClick="ayarlar"
        android:text="@string/about" />

    <Button
        android:id="@+id/button1"
        style="@style/ButtonText"
        android:layout_above="@+id/button5"
        android:layout_marginBottom="23dp"
        android:background="@drawable/buttonyellow"
        android:onClick="normalcarpma"
        android:text="@string/normalmultiply" />

    <Button
        android:id="@+id/button3"
        style="@style/ButtonText"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonblue"
        android:onClick="normaltoplama"
        android:text="@string/normaladd" />

    <Button
        android:id="@+id/button4"
        style="@style/ButtonText"
        android:layout_above="@+id/button3"
        android:layout_alignParentRight="true"
        android:background="@drawable/buttonred"
        android:onClick="hizlitoplama"
        android:text="@string/fastadd" />

    <Button
        android:id="@+id/button2"
        style="@style/ButtonText"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="38dp"
        android:background="@drawable/buttongreen"
        android:onClick="hizlicarpma"
        android:text="@string/fastmultiply" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_marginBottom="39dp"
        android:src="@drawable/ss" />

</RelativeLayout>